# holodeck

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  demo.blend  index.html  pyproject.toml  server.py  styles.css
.github/workflows/: pages.yml  release.yml  tests.yml
blender-support/: README.md  nla_frame_tools.py
deckgen/: __init__.py  blender_manifest.toml
deckgen/core/: __init__.py  manifest_generator.py
deckgen/handlers/: __init__.py  render_handlers.py
demo/render/: 0003.avif  0005.avif  0007.avif  0010.avif  0011.avif  0012.avif  0013.avif  0021.avif  0022.avif  0024.avif  0026.avif  0027.avif  0028.avif  0029.avif  0031.avif  0034.avif  0035.avif  0036.avif  0037.avif  0038.avif  0039.avif  0041.avif  0042.avif  0043.avif  0044.avif  0045.avif  0047.avif  0048.avif  0051.avif  0058.avif  0064.avif  0066.avif  0067.avif  0069.avif  0071.avif  0073.avif  0074.avif  0078.avif  0081.avif  (+55 more)
docs/: index.html  manifest.json  player.js
holodeck/: __init__.py  blender_manifest.toml  cli.py
holodeck-player/: README.md  index.html  player.js  server.py  styles.css
scripts/: build_executable.py  build_pex.py  create_test_blend_fixtures.py  export_holodeck.py  run_holodeck.py  sync_player_assets.py
tests/: test_blender.py  test_blender_integration.py  test_build_executable.py  test_cli.py  test_exporter.py  test_frame_scaling.py  test_frame_selection.py  test_frame_spec.py  test_manifest_generator.py  test_nla_frame_tools.py  test_player_assets.py  test_render_settings.py  test_runtime.py  test_server.py  test_sync_player_assets.py
(+138 files in other folders)
